# hypercurve

./: Cargo.toml  README.md  audit.txt  plan.txt  references.txt
.github/workflows/: ci.yml  deploy-ui-pages.yml
benches/: arc.rs  bezier_algebraic_parameter.rs  bezier_arrangement.rs  bezier_facts.rs  bezier_rational_overlap.rs  bezier_region.rs  bezier_split_materialization.rs  bezier_tangent_order.rs  boolean_pipeline.rs  bspline.rs  containment.rs  curve_path.rs  editing.rs  intersection.rs  offset.rs  rational_bezier.rs  reconstruction.rs  svg_io.rs
examples/: arrangement_report.rs  basic.rs
examples/hypercurve_ui/: Cargo.toml  README.md  index.html
examples/hypercurve_ui/proptest-regressions/: geometry.txt
examples/hypercurve_ui/src/: app.rs  corner_scenes.rs  editor.rs  geometry.rs  main.rs  plotting.rs  scenes.rs  share.rs  theme.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: analytic_surface.rs  bezier_algebraic_image.rs  bezier_algebraic_parameter.rs  bezier_arrangement.rs  bezier_region.rs  bezier_split_materialization.rs  bezier_tangent_order.rs  bspline.rs  curve_string_editing.rs  hypercurve_adversarial_polygons.rs  hypercurve_bboxes_curve_strings_splits.rs  hypercurve_contour_region.rs  hypercurve_events_fragments.rs  hypercurve_full_api.rs  hypercurve_offsets.rs  hypercurve_region_boolean.rs  hypercurve_segment_intersections.rs  planar_pcurve.rs  retained_import.rs  support.rs
src/: analytic_surface.rs  arc_bezier.rs  area.rs  bbox.rs  bezier.rs  bezier_algebraic_image.rs  bezier_arrangement.rs  bezier_boolean.rs  bezier_fit.rs  bezier_fit_source.rs  bezier_flatten.rs  bezier_metric.rs  bezier_moment.rs  bezier_offset.rs  bezier_parameter.rs  bezier_region.rs  bezier_retained_measure.rs  bezier_retained_overlap.rs  bezier_split.rs  bezier_split_endpoint.rs  bezier_tangent_order.rs  bezier_topology.rs  boolean.rs  boolean_boundary.rs  boolean_report.rs  boolean_traversal_report.rs  bspline.rs  bulge.rs  classify.rs  contour.rs  curve.rs  curve_intersection.rs  curve_path_intersection.rs  curve_region_boolean.rs  curve_string.rs  error.rs  events.rs  facts.rs  finite_projection.rs  fragment.rs  (+29 more)
tests/: exact_structural_facts.rs  hypercurve_adversarial_polygons.proptest-regressions  hypercurve_adversarial_polygons.rs  hypercurve_analytic_surface.rs  hypercurve_arc_bezier.rs  hypercurve_bbox.rs  hypercurve_bezier.proptest-regressions  hypercurve_bezier.rs  hypercurve_bezier_algebraic_image.proptest-regressions  hypercurve_bezier_algebraic_image.rs  hypercurve_bezier_algebraic_parameter.rs  hypercurve_bezier_arrangement.rs  hypercurve_bezier_fit_offset.rs  hypercurve_bezier_interpolation.rs  hypercurve_bezier_region.rs  hypercurve_bezier_split_materialization.rs  hypercurve_bezier_tangent_order.rs  hypercurve_boolean.rs  hypercurve_boolean_antagonistic.rs  hypercurve_boolean_pipeline.rs  hypercurve_bspline.rs  hypercurve_circle_predicates.rs  hypercurve_contour.rs  hypercurve_curve.rs  hypercurve_curve_intersection.rs  hypercurve_curve_region_boolean.rs  hypercurve_curve_string.rs  hypercurve_events.rs  hypercurve_fragments.proptest-regressions  hypercurve_fragments.rs  hypercurve_fuzz_invariants.proptest-regressions  hypercurve_fuzz_invariants.rs  hypercurve_fuzz_regressions.rs  hypercurve_geo_regressions.rs  hypercurve_nurbs.rs  hypercurve_nurbs_interpolation.rs  hypercurve_offset.rs  hypercurve_planar_pcurve.rs  hypercurve_polynomial_spline.rs  hypercurve_pr59_shape_regressions.rs  (+10 more)
