[package]
name = "hypercurve"
version = "0.2.0"
edition = "2024"
description = "Hyperreal-backed planar curves, contours, and regions for CAD topology"
authors = ["Timothy Schmidt <timschmidt@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/timschmidt/hypercurve"
readme = "README.md"
keywords = ["cad", "curves", "geometry", "hyperreal", "topology"]
categories = ["mathematics", "graphics", "algorithms"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
# Hyper ecosystem dependencies: keep the crate-official release references and
# the commented workspace references below. Switch to the workspace form for
# local development, then switch back to crates.io versions before publishing.
hyperreal = { version = "0.12.0", default-features = false }
hyperlimit = { version = "0.3.0", default-features = false, features = ["std"], optional = true }
# hyperreal = { path = "../hyperreal", default-features = false }
# hyperlimit = { path = "../hyperlimit", default-features = false, features = ["std"], optional = true }
[dev-dependencies]
geo = "0.32"
proptest = "1"
static_aabb2d_index = "2.0"

[features]
default = ["predicates"]
predicates = ["dep:hyperlimit"]
serde = []

[[bench]]
name = "boolean_pipeline"
harness = false

[[bench]]
name = "containment"
harness = false

[[bench]]
name = "intersection"
harness = false

[[bench]]
name = "offset"
harness = false

[[bench]]
name = "reconstruction"
harness = false

[[bench]]
name = "bezier_facts"
harness = false
