[package]
name = "hypercurve"
version = "0.3.0"
edition = "2024"
description = "Hyperreal-backed planar curves, contours, and regions for CAD topology"
authors = ["Timothy Schmidt <timschmidt@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/timschmidt/hypercurve"
readme = "README.md"
keywords = ["cad", "curves", "geometry", "hyperreal", "topology"]
categories = ["mathematics", "graphics", "algorithms"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
# Hyper sibling dependency switch: keep both local path and crates.io lines; do not remove either.
# Development mode uses the local path lines. For release, comment those and uncomment the crates.io lines.
hyperreal = { path = "../hyperreal", default-features = false }
hypersolve = { path = "../hypersolve", default-features = false }
hyperlimit = { path = "../hyperlimit", default-features = false, features = ["std"], optional = true }
hypertri = { path = "../hypertri", default-features = false, features = ["earcut"], optional = true }
# hyperreal = { version = "0.13.0", default-features = false }
# hypersolve = { version = "0.3.0", default-features = false }
# hyperlimit = { version = "0.4.0", default-features = false, features = ["std"], optional = true }
# hypertri = { version = "0.3.0", default-features = false, features = ["earcut"], optional = true }
[dev-dependencies]
geo = "0.32"
proptest = "1"
static_aabb2d_index = "2.0"

[features]
default = ["predicates"]
predicates = ["dep:hyperlimit"]
serde = []
triangulation = ["dep:hypertri"]

[[bench]]
name = "containment"
harness = false

[[bench]]
name = "intersection"
harness = false

[[bench]]
name = "bezier_algebraic_parameter"
harness = false

[[bench]]
name = "bezier_arrangement"
harness = false

[[bench]]
name = "bezier_split_materialization"
harness = false

[[bench]]
name = "offset"
harness = false

[[bench]]
name = "reconstruction"
harness = false
