[package]
name = "hypercurve"
version = "0.3.0"
edition = "2024"
description = "Hyperreal-backed planar curves, contours, and regions for CAD topology"
authors = ["Timothy Schmidt <timschmidt@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/timschmidt/hypercurve"
readme = "README.md"
keywords = ["cad", "curves", "geometry", "hyperreal", "topology"]
categories = ["mathematics", "graphics", "algorithms"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
# Hyper sibling dependency switch: keep both local path and crates.io lines; do not remove either.
# Release mode uses crates.io version lines. For local development, comment those and uncomment the path lines.
# hyperreal = { path = "../hyperreal", default-features = false }
# hypersolve = { path = "../hypersolve", default-features = false }
# hyperlimit = { path = "../hyperlimit", default-features = false, features = ["std"], optional = true }
# hypertri = { path = "../hypertri", default-features = false, features = ["earcut"], optional = true }
hyperreal = { version = "0.13", default-features = false }
hypersolve = { version = "0.3.0", default-features = false }
hyperlimit = { version = "0.4.0", default-features = false, features = ["std"], optional = true }
hypertri = { version = "0.4.0", default-features = false, features = ["earcut"], optional = true }
num = { version = "0.4.3", features = ["num-bigint"] }
[dev-dependencies]
geo = "0.32"
proptest = "1"

[features]
default = ["predicates"]
predicates = ["dep:hyperlimit"]
serde = []
svg = []
triangulation = ["dep:hypertri"]

[[bench]]
name = "containment"
harness = false

[[bench]]
name = "intersection"
harness = false

[[bench]]
name = "bezier_algebraic_parameter"
harness = false

[[bench]]
name = "bezier_arrangement"
harness = false

[[bench]]
name = "bezier_rational_overlap"
harness = false

[[bench]]
name = "bezier_region"
harness = false

[[bench]]
name = "bezier_split_materialization"
harness = false

[[bench]]
name = "bezier_tangent_order"
harness = false

[[bench]]
name = "bspline"
harness = false

[[bench]]
name = "rational_bezier"
harness = false

[[bench]]
name = "arc"
harness = false

[[bench]]
name = "curve_path"
harness = false

[[bench]]
name = "offset"
harness = false

[[bench]]
name = "editing"
harness = false

[[bench]]
name = "reconstruction"
harness = false

[[bench]]
name = "svg_io"
harness = false
required-features = ["svg"]

[patch.crates-io]
hyperreal = { path = "../hyperreal" }
