[package]
name = "hypercurve-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
hypercurve = { path = ".." }

[[bin]]
name = "bezier_algebraic_parameter"
path = "fuzz_targets/bezier_algebraic_parameter.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bezier_split_materialization"
path = "fuzz_targets/bezier_split_materialization.rs"
test = false
doc = false
bench = false
