[package]
name = "hypercurve-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
hypercurve = { path = ".." }

[[bin]]
name = "bezier_algebraic_parameter"
path = "fuzz_targets/bezier_algebraic_parameter.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bezier_algebraic_image"
path = "fuzz_targets/bezier_algebraic_image.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bezier_split_materialization"
path = "fuzz_targets/bezier_split_materialization.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bezier_tangent_order"
path = "fuzz_targets/bezier_tangent_order.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bezier_arrangement"
path = "fuzz_targets/bezier_arrangement.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bezier_region"
path = "fuzz_targets/bezier_region.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bspline"
path = "fuzz_targets/bspline.rs"
test = false
doc = false
bench = false

[[bin]]
name = "retained_import"
path = "fuzz_targets/retained_import.rs"
test = false
doc = false
bench = false
