[package]
name = "hypercurve_ui"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
hypercurve = { path = "../..", default-features = false, features = ["approx"] }
eframe = { version = "0.33.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
] }
egui = "0.33.0"
egui_plot = "0.34.0"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.81", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
] }
