[package]
name = "hypercurve_ui"
version = "0.2.0"
edition = "2024"
publish = false

[dependencies]
hypercurve = { path = "../..", default-features = false, features = ["predicates"] }
eframe = { version = "0.33.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
] }
egui = "0.33.0"
egui_plot = "0.34.0"
geo = { version = "0.32", default-features = false }
base64 = "0.22"
lzma-rust2 = { version = "0.16", default-features = false, features = ["std", "encoder", "xz"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lyon = "1.0.16"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.81", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Location",
    "Window",
] }

[dev-dependencies]
proptest = "1"
